Fix bug with slider divider line being too short

--- a/css/styles.css
+++ b/css/styles.css
@@ -538,7 +538,7 @@ main {
 .slider::before {
   position: absolute;
   content: '';
-  height: 100vh;
+  height: 200vh;
   width: 1%;
   background-color: black;
   left: 50%;
